--- a/TravelFriend.Windows/Login/LoginWindow.xaml
+++ b/TravelFriend.Windows/Login/LoginWindow.xaml
@@ -39,12 +39,9 @@
                             <styles:ImageButton.RenderTransform>
                                 <ScaleTransform x:Name="AvatarScale" CenterX="50" CenterY="45"/>
                             </styles:ImageButton.RenderTransform>
-                            <styles:ImageButton.ToolTip>
-                                <TextBlock Text="{DynamicResource ClickEdit}"/>
-                            </styles:ImageButton.ToolTip>
                         </styles:ImageButton>
-                        <TextBlock Grid.Row="2" Text="胖胖不是胖胖" FontSize="16" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 0 0 40"/>
-                        <Button Grid.Row="3" Content="{DynamicResource Login}" Foreground="White" Background="{StaticResource DarkGreen}" Width="200" BorderThickness="0" VerticalAlignment="Bottom" Margin="0 0 0 60"/>
+                        <TextBlock Grid.Row="2" Text="sb张之二" FontSize="16" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 0 0 40"/>
+                        <Button x:Name="Login" Click="Login_Click" Grid.Row="3" Content="{DynamicResource Login}" Foreground="White" Background="{StaticResource DarkGreen}" Width="200" BorderThickness="0" VerticalAlignment="Bottom" Margin="0 0 0 60"/>
                     </Grid>
                 </Grid>
             </materialDesign:Flipper.FrontContent>
@@ -78,7 +75,7 @@
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Image Source="../Resources/LoginAccount.png" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="20"/>
-                            <TextBox Grid.Column="1" materialDesign:HintAssist.Hint="{DynamicResource InputAccount}" FontSize="14" Padding="5 0 0 0" VerticalContentAlignment="Center" materialDesign:TextFieldAssist.UnderlineBrush="Transparent" BorderThickness="0"/>
+                            <TextBox Grid.Column="1" Text="{Binding UserName}" materialDesign:HintAssist.Hint="{DynamicResource InputAccount}" FontSize="14" Padding="5 0 0 0" VerticalContentAlignment="Center" materialDesign:TextFieldAssist.UnderlineBrush="Transparent" BorderThickness="0"/>
                             <Image Grid.Column="2" Source="../Resources/DropDown.png" HorizontalAlignment="Right" VerticalAlignment="Center" Height="16" Width="16"/>
                         </Grid>
                     </Border>
@@ -89,7 +86,7 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
                             <Image Source="../Resources/LoginPassword.png"  HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="20"/>
-                            <TextBox Grid.Column="1" materialDesign:HintAssist.Hint="{DynamicResource InputAccount}" FontSize="14" Padding="5 0 0 0" VerticalContentAlignment="Center" materialDesign:TextFieldAssist.UnderlineBrush="Transparent" BorderThickness="0"/>
+                            <PasswordBox Grid.Column="1" materialDesign:HintAssist.Hint="{DynamicResource InputAccount}" FontSize="14" Padding="5 0 0 0" VerticalContentAlignment="Center" materialDesign:TextFieldAssist.UnderlineBrush="Transparent" BorderThickness="0"/>
                         </Grid>
                     </Border>
                     <Grid Grid.Row="3" Margin="0 35 0 0" Width="200" Height="16" VerticalAlignment="Center" HorizontalAlignment="Center">
