--- a/TravelFriend.Windows/Styles/Colors.xaml
+++ b/TravelFriend.Windows/Styles/Colors.xaml
@@ -4,5 +4,7 @@
     <SolidColorBrush x:Key="DarkGreen" Color="#00796B"></SolidColorBrush>
     <SolidColorBrush x:Key="LightGreen" Color="#80CBC4"></SolidColorBrush>
     <SolidColorBrush x:Key="Orange" Color="#FF6D00"></SolidColorBrush>
-    <SolidColorBrush x:Key="Gray" Color="#515151"></SolidColorBrush>
+    <SolidColorBrush x:Key="Gray" Color="#9EA2A5"></SolidColorBrush>
+    <SolidColorBrush x:Key="DarkGray" Color="#515151"></SolidColorBrush>
+    <SolidColorBrush x:Key="LightGray" Color="#F9F6F5"></SolidColorBrush>
 </ResourceDictionary>
