--- a/TravelFriend.Windows/Styles/Language_CN.xaml
+++ b/TravelFriend.Windows/Styles/Language_CN.xaml
@@ -12,4 +12,9 @@
     <sys:String x:Key="Trend">动态</sys:String>
     <sys:String x:Key="Follow">关注</sys:String>
     <sys:String x:Key="Fan">粉丝</sys:String>
+    <sys:String x:Key="Home">首页</sys:String>
+    <sys:String x:Key="Team">团队</sys:String>
+    <sys:String x:Key="Travel">旅程</sys:String>
+    <sys:String x:Key="Search">搜索</sys:String>
+    <sys:String x:Key="AddTrend">添加动态</sys:String>
 </ResourceDictionary>
