--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -8,8 +8,31 @@
         xmlns:home="clr-namespace:TravelFriend.Windows.Home"
         xmlns:local="clr-namespace:TravelFriend.Windows"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" WindowStyle="None"
-        AllowsTransparency="True" ResizeMode="CanResize"
-        Title="MainWindow" Height="750" Width="1100">
+        AllowsTransparency="True" StateChanged="Window_StateChanged"
+        ResizeMode="CanResizeWithGrip" Title="MainWindow" Height="750" Width="1100">
+    <Window.Resources>
+        <Style x:Key="AddTrendStyle" TargetType="Button">
+            <Style.Setters>
+                <Setter Property="Background" Value="{StaticResource MainGreen}"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <Border BorderThickness="0" CornerRadius="3" Background="{TemplateBinding Background}">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Image Margin="20 0 5 0" Source="/Resources/Add.png" Width="16" Height="16" VerticalAlignment="Center"/>
+                                    <TextBlock Grid.Column="1" Foreground="White" FontSize="14" VerticalAlignment="Center" HorizontalAlignment="Left" Text="{DynamicResource AddTrend}"/>
+                                </Grid>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style.Setters>
+        </Style>
+    </Window.Resources>
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -38,8 +61,8 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Image HorizontalAlignment="Left" Width="24" Height="24" Source="/Resources/Logo.png"/>
-                <TextBlock Grid.Column="1" Text="{DynamicResource AppName_EN}" Margin="10 0 0 0" VerticalAlignment="Center" FontSize="18" FontStyle="Italic" FontWeight="Bold"/>
+                <Image HorizontalAlignment="Left" Width="24" Height="24" Source="/Resources/Green/Logo.png"/>
+                <TextBlock Grid.Column="1" Foreground="{StaticResource MainGreen}" Text="{DynamicResource AppName_EN}" Margin="10 0 0 0" VerticalAlignment="Center" FontSize="18" FontStyle="Italic" FontWeight="Bold"/>
             </Grid>
             <Border Background="Transparent" MouseLeftButtonDown="TopArea_MouseLeftButtonDown"/>
             <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 40 0 0">
@@ -77,22 +100,27 @@
                 </StackPanel>
             </Grid>
             <StackPanel Grid.Row="5" Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0 70 0 0">
-                <RadioButton Margin="40 0" Cursor="Hand" IsChecked="True">
+                <RadioButton Cursor="Hand" IsChecked="True">
                     <RadioButton.Style>
                         <Style TargetType="RadioButton">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="RadioButton">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Source="/Resources/zhangzhier.png" Width="20" Height="20" HorizontalAlignment="Left"/>
-                                            <TextBlock Text="首页" VerticalAlignment="Center" Margin="25 0 0 0" FontSize="14" FontWeight="Bold"/>
-                                        </StackPanel>
+                                        <Grid>
+                                            <StackPanel Orientation="Horizontal" Margin="40 15">
+                                                <Image x:Name="HomeImage" Width="20" Height="20" HorizontalAlignment="Left"/>
+                                                <TextBlock Text="{DynamicResource Home}" VerticalAlignment="Center" Margin="25 0 0 0" FontSize="14" FontWeight="Bold"/>
+                                            </StackPanel>
+                                            <Border Background="Transparent"/>
+                                        </Grid>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsChecked" Value="True">
                                                 <Setter Property="Foreground" Value="{StaticResource MainGreen}"/>
+                                                <Setter TargetName="HomeImage" Property="Source" Value="/Resources/Green/Home.png"/>
                                             </Trigger>
                                             <Trigger Property="IsChecked" Value="False">
                                                 <Setter Property="Foreground" Value="Black"/>
+                                                <Setter TargetName="HomeImage" Property="Source" Value="/Resources/Home.png"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -107,16 +135,21 @@
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="RadioButton">
-                                        <StackPanel Orientation="Horizontal" Margin="40 30 40 0">
-                                            <Image Source="/Resources/zhangzhier.png" Width="20" Height="20" HorizontalAlignment="Left"/>
-                                            <TextBlock Text="团队" VerticalAlignment="Center" Margin="25 0 0 0" FontSize="14" FontWeight="Bold"/>
-                                        </StackPanel>
+                                        <Grid>
+                                            <StackPanel Orientation="Horizontal" Margin="40 15">
+                                                <Image x:Name="TeamImage" Width="20" Height="20" HorizontalAlignment="Left"/>
+                                                <TextBlock Text="{DynamicResource Team}" VerticalAlignment="Center" Margin="25 0 0 0" FontSize="14" FontWeight="Bold"/>
+                                            </StackPanel>
+                                            <Border Background="Transparent"/>
+                                        </Grid>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsChecked" Value="True">
                                                 <Setter Property="Foreground" Value="{StaticResource MainGreen}"/>
+                                                <Setter TargetName="TeamImage" Property="Source" Value="/Resources/Green/Team.png"/>
                                             </Trigger>
                                             <Trigger Property="IsChecked" Value="False">
                                                 <Setter Property="Foreground" Value="Black"/>
+                                                <Setter TargetName="TeamImage" Property="Source" Value="/Resources/Team.png"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -125,22 +158,27 @@
                         </Style>
                     </RadioButton.Style>
                 </RadioButton>
-                <RadioButton Margin="40 30 40 0" Cursor="Hand">
+                <RadioButton Cursor="Hand">
                     <RadioButton.Style>
                         <Style TargetType="RadioButton">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="RadioButton">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Source="/Resources/zhangzhier.png" Width="20" Height="20" HorizontalAlignment="Left"/>
-                                            <TextBlock Text="旅程" VerticalAlignment="Center" Margin="25 0 0 0" FontSize="14" FontWeight="Bold"/>
-                                        </StackPanel>
+                                        <Grid>
+                                            <StackPanel Orientation="Horizontal" Margin="40 15">
+                                                <Image x:Name="TravelImage" Width="20" Height="20" HorizontalAlignment="Left"/>
+                                                <TextBlock Text="{DynamicResource Travel}" VerticalAlignment="Center" Margin="25 0 0 0" FontSize="14" FontWeight="Bold"/>
+                                            </StackPanel>
+                                            <Border Background="Transparent"/>
+                                        </Grid>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsChecked" Value="True">
                                                 <Setter Property="Foreground" Value="{StaticResource MainGreen}"/>
+                                                <Setter TargetName="TravelImage" Property="Source" Value="/Resources/Green/Travel.png"/>
                                             </Trigger>
                                             <Trigger Property="IsChecked" Value="False">
                                                 <Setter Property="Foreground" Value="Black"/>
+                                                <Setter TargetName="TravelImage" Property="Source" Value="/Resources/Travel.png"/>
                                             </Trigger>
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
@@ -151,7 +189,7 @@
                 </RadioButton>
             </StackPanel>
         </Grid>
-        <Border Grid.Column="1" Height="70" BorderBrush="{StaticResource LightGray}" BorderThickness="0 0 0 1">
+        <Border Grid.Column="1" Height="50" BorderBrush="{StaticResource LightGray}" BorderThickness="0 0 0 1">
             <Grid x:Name="TopArea" Background="Transparent">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -159,18 +197,41 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Border Grid.ColumnSpan="5" MouseLeftButtonDown="TopArea_MouseLeftButtonDown" Background="Transparent"/>
-                <Border x:Name="PersonalData" Grid.Column="4" Margin="0 0 35 0" Width="30" Height="30" MouseLeftButtonUp="PersonalData_MouseLeftButtonUp" Cursor="Hand" VerticalAlignment="Center" CornerRadius="30" BorderThickness="1" BorderBrush="Transparent">
+                <Border BorderThickness="0.5" BorderBrush="{StaticResource Gray}" Height="30" CornerRadius="5" Width="260" Margin="65 0 0 0" HorizontalAlignment="Left">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Image Source="/Resources/Gray/Search.png" Width="12" Margin="10 0" VerticalAlignment="Center"/>
+                        <TextBox x:Name="SearchInput" Grid.Column="1" materialDesign:HintAssist.Hint="{DynamicResource Search}" Foreground="{StaticResource DarkGray}" BorderThickness="0" FontSize="14" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center"/>
+                    </Grid>
+                </Border>
+                <Button x:Name="AddTrend" Grid.Column="1" Margin="0 0 40 0" Height="30" Width="130" Style="{StaticResource AddTrendStyle}" BorderThickness="0" Cursor="Hand"/>
+                <Border x:Name="PersonalData" Grid.Column="2" Margin="0 0 10 0" Width="28" Height="28" MouseLeftButtonUp="PersonalData_MouseLeftButtonUp" Cursor="Hand" VerticalAlignment="Center" CornerRadius="30" BorderThickness="1" BorderBrush="Transparent">
                     <Border.Effect>
                         <DropShadowEffect Color="Black" BlurRadius="25" ShadowDepth="0" Opacity=".5"/>
                     </Border.Effect>
-                    <Image Source="/Resources/zhangzhier.png" Width="30" Height="30">
+                    <Image Source="/Resources/zhangzhier.png" Width="28" Height="28">
                         <Image.Clip>
-                            <EllipseGeometry Center="15,15" RadiusX="15" RadiusY="15"/>
+                            <EllipseGeometry Center="14,14" RadiusX="14" RadiusY="14"/>
                         </Image.Clip>
                     </Image>
                 </Border>
+                <Image Grid.Column="3" Margin="0 0 20 0" Source="/Resources/Gray/ToggleDown.png" Width="12" VerticalAlignment="Center"/>
+                <Image Grid.Column="4" Margin="0 0 20 0" Source="/Resources/Gray/Message.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Image Grid.Column="5" Margin="0 0 20 0" Source="/Resources/Gray/Setting.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Border Grid.Column="6" Margin="0 0 20 0" Width="1" Height="18" BorderThickness="1" BorderBrush="{StaticResource Gray}" VerticalAlignment="Center"/>
+                <Image x:Name="Min" MouseLeftButtonUp="Min_MouseLeftButtonUp" Grid.Column="7" Margin="0 0 20 0" Source="/Resources/Gray/Min.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Image x:Name="Max" MouseLeftButtonUp="Max_MouseLeftButtonUp" Grid.Column="8" Margin="0 0 20 0" Source="{Binding IsMax}" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Image x:Name="Close" MouseLeftButtonUp="Close_MouseLeftButtonUp" Grid.Column="9" Margin="0 0 26 0" Source="/Resources/Gray/Close.png" Width="16" VerticalAlignment="Center" Cursor="Hand"/>
             </Grid>
         </Border>
         <home:HomePage Grid.Row="1" Grid.Column="1"/>
