[ADD]对接登录接口及主界面和登陆界面之间的交互

--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -7,10 +7,12 @@
         xmlns:team="clr-namespace:TravelFriend.Windows.Team"
         xmlns:home="clr-namespace:TravelFriend.Windows.Home"
         xmlns:local="clr-namespace:TravelFriend.Windows"
+        xmlns:converter="clr-namespace:TravelFriend.Windows.Converter"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" WindowStyle="None"
         AllowsTransparency="True" StateChanged="Window_StateChanged"
         ResizeMode="CanResizeWithGrip" Title="MainWindow" Height="750" Width="1100">
     <Window.Resources>
+        <converter:BoolenToVisibilityConverter x:Key="VisibilityConverter"></converter:BoolenToVisibilityConverter>
         <Style x:Key="AddTrendStyle" TargetType="Button">
             <Style.Setters>
                 <Setter Property="Background" Value="{StaticResource MainGreen}"/>
@@ -31,6 +33,25 @@
                     </Setter.Value>
                 </Setter>
             </Style.Setters>
+        </Style>
+        <Style x:Key="UnderlineTextBlock" TargetType="TextBlock">
+            <Style.Setters>
+                <Setter Property="TextDecorations">
+                    <Setter.Value>
+                        <TextDecorationCollection>
+                            <TextDecoration PenOffset="2" Location="Underline"/>
+                        </TextDecorationCollection>
+                    </Setter.Value>
+                </Setter>
+            </Style.Setters>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Foreground" Value="{StaticResource MainGreen}"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="False">
+                    <Setter Property="Foreground" Value="{StaticResource Gray}"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
     </Window.Resources>
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -69,17 +90,17 @@
                 <Border Width="80" Height="80" CornerRadius="80" BorderThickness="1" BorderBrush="{StaticResource MainGreen}"/>
                 <Border Width="66" Height="66" CornerRadius="66" BorderThickness="1" BorderBrush="Transparent">
                     <Border.Effect>
-                        <DropShadowEffect Color="Black" BlurRadius="25" ShadowDepth="0" Opacity=".8" />
+                        <DropShadowEffect Color="Black" BlurRadius="20" ShadowDepth="0" Opacity=".8" />
                     </Border.Effect>
-                    <Image Source="/Resources/zhangzhier.png" Width="66" Height="66">
+                    <Image Source="/Resources/DefaultBigAvatar.png" Width="66" Height="66">
                         <Image.Clip>
-                            <EllipseGeometry Center="33,33" RadiusX="33" RadiusY="31"/>
+                            <EllipseGeometry Center="33,33" RadiusX="31" RadiusY="31"/>
                         </Image.Clip>
                     </Image>
                 </Border>
             </Grid>
-            <TextBlock Grid.Row="2" Text="张之二sb" Margin="0 20 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold"/>
-            <TextBlock Grid.Row="3" Text="中国 湖南" Foreground="{StaticResource Gray}" Margin="0 5 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" FontWeight="Bold"/>
+            <TextBlock Grid.Row="2" Text="{Binding NickName}" Margin="0 20 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold"/>
+            <TextBlock Grid.Row="3" Text="{Binding Address}" Foreground="{StaticResource Gray}" Margin="0 5 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" FontWeight="Bold"/>
             <Grid Grid.Row="4" HorizontalAlignment="Stretch" Margin="20 15 20 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -201,7 +222,6 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Border Grid.ColumnSpan="5" MouseLeftButtonDown="TopArea_MouseLeftButtonDown" Background="Transparent"/>
                 <Border BorderThickness="0.5" BorderBrush="{StaticResource Gray}" Height="30" CornerRadius="5" Width="260" Margin="65 0 0 0" HorizontalAlignment="Left">
@@ -215,23 +235,30 @@
                     </Grid>
                 </Border>
                 <Button x:Name="AddTrend" Grid.Column="1" Margin="0 0 40 0" Height="30" Width="130" Style="{StaticResource AddTrendStyle}" BorderThickness="0" Cursor="Hand"/>
-                <Border x:Name="PersonalData" Grid.Column="2" Margin="0 0 10 0" Width="28" Height="28" MouseLeftButtonUp="PersonalData_MouseLeftButtonUp" Cursor="Hand" VerticalAlignment="Center" CornerRadius="30" BorderThickness="1" BorderBrush="Transparent">
-                    <Border.Effect>
-                        <DropShadowEffect Color="Black" BlurRadius="25" ShadowDepth="0" Opacity=".5"/>
-                    </Border.Effect>
-                    <Image Source="/Resources/zhangzhier.png" Width="28" Height="28">
-                        <Image.Clip>
-                            <EllipseGeometry Center="14,14" RadiusX="14" RadiusY="14"/>
-                        </Image.Clip>
-                    </Image>
-                </Border>
-                <Image Grid.Column="3" Margin="0 0 20 0" Source="/Resources/Gray/ToggleDown.png" Width="12" VerticalAlignment="Center"/>
-                <Image Grid.Column="4" Margin="0 0 20 0" Source="/Resources/Gray/Message.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
-                <Image Grid.Column="5" Margin="0 0 20 0" Source="/Resources/Gray/Setting.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
-                <Border Grid.Column="6" Margin="0 0 20 0" Width="1" Height="18" BorderThickness="1" BorderBrush="{StaticResource Gray}" VerticalAlignment="Center"/>
-                <Image x:Name="Min" MouseLeftButtonUp="Min_MouseLeftButtonUp" Grid.Column="7" Margin="0 0 20 0" Source="/Resources/Gray/Min.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
-                <Image x:Name="Max" MouseLeftButtonUp="Max_MouseLeftButtonUp" Grid.Column="8" Margin="0 0 20 0" Source="{Binding IsMax}" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
-                <Image x:Name="Close" MouseLeftButtonUp="Close_MouseLeftButtonUp" Grid.Column="9" Margin="0 0 26 0" Source="/Resources/Gray/Close.png" Width="16" VerticalAlignment="Center" Cursor="Hand"/>
+                <TextBlock x:Name="Unlogin" MouseLeftButtonUp="Unlogin_MouseLeftButtonUp" Grid.Column="2" Cursor="Hand" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{DynamicResource Unlogin}" Style="{StaticResource UnderlineTextBlock}" FontSize="16"/>
+                <Grid x:Name="PersonalData" Grid.Column="2" Visibility="Collapsed" MouseLeftButtonUp="PersonalData_MouseLeftButtonUp" Cursor="Hand" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Border Margin="0 0 10 0" Width="28" Height="28" VerticalAlignment="Center" CornerRadius="30" BorderThickness="1" BorderBrush="Transparent">
+                        <Border.Effect>
+                            <DropShadowEffect Color="Black" BlurRadius="25" ShadowDepth="0" Opacity=".5"/>
+                        </Border.Effect>
+                        <Image Source="/Resources/DefaultBigAvatar.png" Width="28" Height="28">
+                            <Image.Clip>
+                                <EllipseGeometry Center="14,14" RadiusX="14" RadiusY="14"/>
+                            </Image.Clip>
+                        </Image>
+                    </Border>
+                    <Image Grid.Column="1" Source="/Resources/Gray/ToggleDown.png" Width="12" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                </Grid>
+                <Image Grid.Column="3" Margin="20 0 20 0" Source="/Resources/Gray/Message.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Image Grid.Column="4" Margin="0 0 20 0" Source="/Resources/Gray/Setting.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Border Grid.Column="5" Margin="0 0 20 0" Width="1" Height="18" BorderThickness="1" BorderBrush="{StaticResource Gray}" VerticalAlignment="Center"/>
+                <Image x:Name="Min" MouseLeftButtonUp="Min_MouseLeftButtonUp" Grid.Column="6" Margin="0 0 20 0" Source="/Resources/Gray/Min.png" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Image x:Name="Max" MouseLeftButtonUp="Max_MouseLeftButtonUp" Grid.Column="7" Margin="0 0 20 0" Source="{Binding IsMax}" Width="18" VerticalAlignment="Center" Cursor="Hand"/>
+                <Image x:Name="Close" MouseLeftButtonUp="Close_MouseLeftButtonUp" Grid.Column="8" Margin="0 0 26 0" Source="/Resources/Gray/Close.png" Width="16" VerticalAlignment="Center" Cursor="Hand"/>
             </Grid>
         </Border>
         <home:HomePage Grid.Row="1" Grid.Column="1"/>
