--- a/TravelFriend.Windows/Styles/Language_CN.xaml
+++ b/TravelFriend.Windows/Styles/Language_CN.xaml
@@ -18,4 +18,5 @@
     <sys:String x:Key="Search">搜索</sys:String>
     <sys:String x:Key="AddTrend">添加动态</sys:String>
     <sys:String x:Key="Unlogin">未登录</sys:String>
+    <sys:String x:Key="ClickToLogin">点击登录新的账号</sys:String>
 </ResourceDictionary>
