--- a/TravelFriend.Windows/Styles/Language_CN.xaml
+++ b/TravelFriend.Windows/Styles/Language_CN.xaml
@@ -20,4 +20,5 @@
     <sys:String x:Key="Unlogin">未登录</sys:String>
     <sys:String x:Key="ClickToLogin">点击登录新的账号</sys:String>
     <sys:String x:Key="UpdateSuccess">修改成功</sys:String>
+    <sys:String x:Key="UpdatePersonalData">修改资料</sys:String>
 </ResourceDictionary>
