--- a/TravelFriend.Windows/Main/PersonalDataPopup.xaml
+++ b/TravelFriend.Windows/Main/PersonalDataPopup.xaml
@@ -4,9 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TravelFriend.Windows.Main"
-             xmlns:ms="clr-namespace:TravelFriend.Windows.Styles" xmlns:common="clr-namespace:TravelFriend.Windows.Common"
-       AllowsTransparency="True" Height="290" Width="200"
-             mc:Ignorable="d">
+             xmlns:ms="clr-namespace:TravelFriend.Windows.Styles" 
+             xmlns:common="clr-namespace:TravelFriend.Windows.Common"
+             xmlns:converter="clr-namespace:TravelFriend.Windows.Converter"
+             AllowsTransparency="True" Height="290" Width="200" mc:Ignorable="d">
+    <Popup.Resources>
+        <converter:GenderToImageSourceConverter x:Key="GenderToImage"/>
+    </Popup.Resources>
     <ms:MessageBorder BorderThickness="1" BorderBrush="{StaticResource LightGray}" Background="White" Padding="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                       SnapsToDevicePixels="True" Placement="TopLeft" CornerRadius="5" Height="270" Width="180" TailHeight="7" TailWidth="13" Margin="10">
         <ms:MessageBorder.Effect>
@@ -32,7 +36,10 @@
                     </common:Avatar>
                 </Border>
                 <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Left">
-                    <TextBlock x:Name="UserName" FontSize="14" Text="{Binding NickName}" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left" Width="85" Margin="15,0,0,0"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Width="85" Margin="15,0,0,0">
+                        <TextBlock x:Name="UserName" FontSize="14" Text="{Binding NickName}" TextTrimming="CharacterEllipsis"/>
+                        <Image Source="{Binding Gender,Converter={StaticResource GenderToImage}}" Width="14" Height="14" Margin="2 0 0 0" VerticalAlignment="Center"/>
+                    </StackPanel>
                     <TextBlock x:Name="Address" FontSize="12" Text="{Binding Address}" Foreground="{StaticResource Gray}" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left" Margin="15,10,0,0" Width="85"/>
                 </StackPanel>
             </Grid>
