--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -15,6 +15,7 @@
         ResizeMode="CanResizeWithGrip" Title="MainWindow" Height="750" Width="1100">
     <Window.Resources>
         <converter:BoolenToVisibilityConverter x:Key="VisibilityConverter"></converter:BoolenToVisibilityConverter>
+        <converter:GenderToImageSourceConverter x:Key="GenderToImage"></converter:GenderToImageSourceConverter>
         <Style x:Key="AddTrendStyle" TargetType="Button">
             <Style.Setters>
                 <Setter Property="Background" Value="{StaticResource MainGreen}"/>
@@ -102,7 +103,10 @@
                         </common:Avatar>
                     </Border>
                 </Grid>
-                <TextBlock Grid.Row="2" Text="{Binding NickName}" Margin="0 20 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold"/>
+                <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 20 0 0">
+                    <TextBlock x:Name="UserName" FontSize="14" Text="{Binding NickName}" TextTrimming="CharacterEllipsis" FontWeight="Bold"/>
+                    <Image Source="{Binding Gender,Converter={StaticResource GenderToImage}}" Width="14" Height="14" Margin="2 0 0 0" VerticalAlignment="Center"/>
+                </StackPanel>
                 <TextBlock Grid.Row="3" Text="{Binding Address}" Foreground="{StaticResource Gray}" Margin="0 5 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" FontWeight="Bold"/>
                 <Grid Grid.Row="4" HorizontalAlignment="Stretch" Margin="20 15 20 0">
                     <Grid.ColumnDefinitions>
