[ADD]消息系统对接完成，完成头像部分改造，使用观察者模式

--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -96,7 +96,7 @@
                         <Border.Effect>
                             <DropShadowEffect Color="Green" BlurRadius="15" ShadowDepth="0" Opacity=".8" />
                         </Border.Effect>
-                        <common:Avatar x:Name="MenuAvatarImage" IsReloadAvatar="{Binding IsReloadAvatar}" Source="/Resources/DefaultBigAvatar.png" Width="66" Height="66" Stretch="UniformToFill">
+                        <common:Avatar x:Name="MenuAvatarImage" Source="/Resources/DefaultBigAvatar.png" Width="66" Height="66" Stretch="UniformToFill">
                             <Image.Clip>
                                 <EllipseGeometry Center="33,33" RadiusX="33" RadiusY="33"/>
                             </Image.Clip>
@@ -249,7 +249,7 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <Border Margin="0 0 10 0" VerticalAlignment="Center" CornerRadius="30" BorderThickness="1" BorderBrush="Transparent">
-                            <common:Avatar x:Name="PersonaleDataImage" IsReloadAvatar="{Binding IsReloadAvatar}" Source="/Resources/DefaultBigAvatar.png" Width="28" Height="28" Stretch="UniformToFill">
+                            <common:Avatar x:Name="PersonaleDataImage" Source="/Resources/DefaultBigAvatar.png" Width="28" Height="28" Stretch="UniformToFill">
                                 <Image.Clip>
                                     <EllipseGeometry Center="14,14" RadiusX="14" RadiusY="14"/>
                                 </Image.Clip>
